src/styles.css
/* GENERAL RULES */

body {
  align-items: center;
  background-color: #535454;
  display: flex;
  flex-direction: column;
  font-family: "Lato", sans-serif;
}

h1 {
  color: #FECB60;
  font-size: 10vmin;
}

h2 {
  font-size: 7vmin;
}

p {
  font-size: 3vmin;
}

.hidden {
  display: none!important;
}

main {
  height: 85vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

/* TOP BAR */

.top-bar {
  display: flex;
  justify-content: space-around;
  height: 15vh;
  width: 75%;
  margin-bottom: 5%;
}

.back-button {
  margin-right: 20%;
  border: none;
  border-radius: 10px;
  height: 50%;
  margin-top: 10%;
}

.icon {
  background-color: white;
  margin-left: 20%;
  border-radius: 10px;
  height: 50%;
  margin-top: 10%;
}

.back-arrow {
  height: 100%;
}

/* HOME */

.home-dashboard,
.hydration-dashboard,
.sleep-dashboard,
.activity-dashboard {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* height: 85vh; */
}

.welcome-card {
  background-color: white;
  border: solid, 10px, white;
  border-radius: 10px;
  color: #535454;
  display: flex;
  flex-direction: column;
  text-align: center;
  width: 90%;
  margin-bottom: 10px;
}

.profile-pic {
  height: 100px;
  width: 100px;
  align-self: center;
}

.step-goal-compare {
  font-size: 5vmin;
}

.main-buttons {
  font-family: "Lato", sans-serif;
  background-color: white;
  border: none;
  border-radius: 10px;
  display: flex;
  width: 90%;
  align-items: center;
  margin: 10px;
  justify-content: center;
}

.button-icon {
  height: 100px;
  padding: 10px;
}

/* DASHBOARDS */

.hydration-dashboard,
.sleep-dashboard,
.activity-dashboard {
  font-size: 6vmin;
  text-align: center;
  width: 85%;
}

.hydration,
.sleep,
.activity {
  background-color: white;
  border-radius: 10px;
  margin: 10px;
}

/* HYDRATION */

.daily-hydration {
  min-height: 30%;
  width: 90%;
}

.weekly-hydration {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90%;
}

/* SLEEP */

/* .sleep {
  height: 25%;
  width: 90%;
} */

.daily-sleep {
  display: flex;
  height: 50%;
  justify-content: space-between;
  width: 90%;
}

.hours-slept,
.sleep-quality {
  width: 50%;
}

.weekly-sleep {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90%;
}

/* ACTIVITY */


.daily-activity {
  display: flex;
  flex-direction: column;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  width: 90%;
}

.weekly-activity {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90%;
}

